--- a/appview/pages/templates/fragments/diff.html
+++ b/appview/pages/templates/fragments/diff.html
@@ -11,47 +11,47 @@
   {{ $last := sub (len $diff) 1 }}
   {{ range $idx, $hunk := $diff }}
   {{ with $hunk }}
-  <section class="mt-6 border border-gray-200 w-full mx-auto rounded bg-white drop-shadow-sm">
+  <section class="mt-6 border border-gray-200 dark:border-gray-700 w-full mx-auto rounded bg-white dark:bg-gray-800 drop-shadow-sm">
     <div id="file-{{ .Name.New }}">
       <div id="diff-file">
         <details open>
           <summary class="list-none cursor-pointer sticky top-0">
-            <div id="diff-file-header" class="rounded cursor-pointer bg-white flex justify-between">
+            <div id="diff-file-header" class="rounded cursor-pointer bg-white dark:bg-gray-800 flex justify-between">
               <div id="left-side-items" class="p-2 flex gap-2 items-center">
                 {{ $markerstyle := "diff-type p-1 mr-1 font-mono text-sm rounded select-none" }}
 
                 {{ if .IsNew }}
-                <span class="bg-green-100 text-green-700 {{ $markerstyle }}">ADDED</span>
+                <span class="bg-green-100 text-green-700 dark:bg-green-800/50 dark:text-green-400 {{ $markerstyle }}">ADDED</span>
                 {{ else if .IsDelete }}
-                <span class="bg-red-100 text-red-700 {{ $markerstyle }}">DELETED</span>
+                <span class="bg-red-100 text-red-700 dark:bg-red-800/50 dark:text-red-400 {{ $markerstyle }}">DELETED</span>
                 {{ else if .IsCopy }}
-                <span class="bg-gray-100 text-gray-700 {{ $markerstyle }}">COPIED</span>
+                <span class="bg-gray-100 text-gray-700 dark:bg-gray-700 dark:text-gray-300 {{ $markerstyle }}">COPIED</span>
                 {{ else if .IsRename }}
-                <span class="bg-gray-100 text-gray-700 {{ $markerstyle }}">RENAMED</span>
+                <span class="bg-gray-100 text-gray-700 dark:bg-gray-700 dark:text-gray-300 {{ $markerstyle }}">RENAMED</span>
                 {{ else }}
-                <span class="bg-gray-100 text-gray-700 {{ $markerstyle }}">MODIFIED</span>
+                <span class="bg-gray-100 text-gray-700 dark:bg-gray-700 dark:text-gray-300 {{ $markerstyle }}">MODIFIED</span>
                 {{ end }}
 
                 {{ if .IsDelete }}
-                <a {{if $this }}href="/{{ $repo }}/blob/{{ $this }}/{{ .Name.Old }}"{{end}}>
+                <a class="dark:text-white" {{if $this }}href="/{{ $repo }}/blob/{{ $this }}/{{ .Name.Old }}"{{end}}>
                   {{ .Name.Old }}
                 </a>
                 {{ else if (or .IsCopy .IsRename) }}
-                <a {{if $parent}}href="/{{ $repo }}/blob/{{ $parent }}/{{ .Name.Old }}"{{end}}>
+                <a class="dark:text-white" {{if $parent}}href="/{{ $repo }}/blob/{{ $parent }}/{{ .Name.Old }}"{{end}}>
                   {{ .Name.Old }}
                 </a>
                 {{ i "arrow-right" "w-4 h-4" }}
-                <a {{if $this}}href="/{{ $repo }}/blob/{{ $this }}/{{ .Name.New }}"{{end}}>
+                <a class="dark:text-white" {{if $this}}href="/{{ $repo }}/blob/{{ $this }}/{{ .Name.New }}"{{end}}>
                   {{ .Name.New }}
                 </a>
                 {{ else }}
-                <a {{if $this}}href="/{{ $repo }}/blob/{{ $this }}/{{ .Name.New }}"{{end}}>
+                <a class="dark:text-white" {{if $this}}href="/{{ $repo }}/blob/{{ $this }}/{{ .Name.New }}"{{end}}>
                   {{ .Name.New }}
                 </a>
                 {{ end }}
               </div>
 
-              {{ $iconstyle := "p-1 mx-1 hover:bg-gray-100 rounded" }}
+              {{ $iconstyle := "p-1 mx-1 hover:bg-gray-100 dark:hover:bg-gray-700 rounded" }}
               <div id="right-side-items" class="p-2 flex items-center">
                 <a title="top of file" href="#file-{{ .Name.New }}" class="{{ $iconstyle }}">{{ i "arrow-up-to-line" "w-4 h-4" }}</a>
                 {{ if gt $idx 0 }}
@@ -70,29 +70,29 @@
 
           <div class="transition-all duration-700 ease-in-out">
             {{ if .IsDelete }}
-            <p class="text-center text-gray-400 p-4">
+            <p class="text-center text-gray-400 dark:text-gray-500 p-4">
             This file has been deleted in this commit.
             </p>
             {{ else }}
             {{ if .IsBinary }}
-            <p class="text-center text-gray-400 p-4">
+            <p class="text-center text-gray-400 dark:text-gray-500 p-4">
             This is a binary file and will not be displayed.
             </p>
             {{ else }}
             <pre class="overflow-auto">
               {{- range .TextFragments -}}
-                <div class="bg-gray-100 text-gray-500 select-none">{{ .Header }}</div>
+                <div class="bg-gray-100 dark:bg-gray-700 text-gray-500 dark:text-gray-400 select-none">{{ .Header }}</div>
                 {{- range .Lines -}}
                     {{- if eq .Op.String "+" -}}
-                    <div class="bg-green-100 text-green-700 p-1 w-full min-w-fit"><span class="select-none mx-2">{{ .Op.String }}</span><span>{{ .Line }}</span></div>
+                    <div class="bg-green-100 dark:bg-green-800/30 text-green-700 dark:text-green-400 p-1 w-full min-w-fit"><span class="select-none mx-2">{{ .Op.String }}</span><span>{{ .Line }}</span></div>
                     {{- end -}}
 
                     {{- if eq .Op.String "-" -}}
-                    <div class="bg-red-100 text-red-700 p-1 w-full min-w-fit"><span class="select-none mx-2">{{ .Op.String }}</span><span>{{ .Line }}</span></div>
+                    <div class="bg-red-100 dark:bg-red-800/30 text-red-700 dark:text-red-400 p-1 w-full min-w-fit"><span class="select-none mx-2">{{ .Op.String }}</span><span>{{ .Line }}</span></div>
                     {{- end -}}
 
                     {{- if eq .Op.String " " -}}
-                    <div class="bg-white text-gray-500 px"><span class="select-none mx-2">{{ .Op.String }}</span><span>{{ .Line }}</span></div>
+                    <div class="bg-white dark:bg-gray-800 text-gray-500 dark:text-gray-400 px"><span class="select-none mx-2">{{ .Op.String }}</span><span>{{ .Line }}</span></div>
                     {{- end -}}
 
                 {{- end -}}
