--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -1,6 +1,6 @@
 {{ define "layouts/base" }}
     <!doctype html>
-    <html lang="en">
+    <html lang="en" class="dark:bg-gray-900">
         <head>
             <meta charset="UTF-8" />
             <meta
@@ -13,8 +13,8 @@
             <title>{{ block "title" . }}{{ end }} · tangled</title>
             {{ block "extrameta" . }}{{ end }}
         </head>
-        <body class="bg-slate-100">
-          <div class="container mx-auto px-1 pt-4  min-h-screen flex flex-col">
+        <body class="bg-slate-100 dark:bg-gray-900 dark:text-white transition-colors duration-200">
+          <div class="container mx-auto px-1 pt-4 min-h-screen flex flex-col">
             <header style="z-index: 5">
               {{ block "topbar" . }}
               {{ template "layouts/topbar" . }}
