--- a/appview/pages/templates/layouts/topbar.html
+++ b/appview/pages/templates/layouts/topbar.html
@@ -1,5 +1,5 @@
 {{ define "layouts/topbar" }}
-    <nav class="space-x-4 mb-4 px-6 py-2 rounded bg-white drop-shadow-sm">
+    <nav class="space-x-4 mb-4 px-6 py-2 rounded bg-white dark:bg-gray-800 dark:text-white drop-shadow-sm">
         <div class="container flex justify-between p-0">
             <div id="left-items">
                 <a href="/" hx-boost="true" class="flex gap-2 font-semibold italic">
@@ -28,12 +28,12 @@
         {{ didOrHandle .Did .Handle }}
     </summary>
     <div
-        class="absolute flex flex-col right-0 mt-4 p-4 rounded w-48 bg-white border border-gray-200"
+        class="absolute flex flex-col right-0 mt-4 p-4 rounded w-48 bg-white dark:bg-gray-800 dark:text-white border border-gray-200 dark:border-gray-700"
     >
         <a href="/{{ didOrHandle .Did .Handle }}">profile</a>
         <a href="/knots">knots</a>
         <a href="/settings">settings</a>
-        <a href="/logout" class="text-red-400 hover:text-red-700">logout</a>
+        <a href="/logout" class="text-red-400 hover:text-red-700 dark:text-red-400 dark:hover:text-red-300">logout</a>
     </div>
 </details>
 {{ end }}
