--- a/appview/pages/templates/repo/empty.html
+++ b/appview/pages/templates/repo/empty.html
@@ -2,31 +2,31 @@
 
 {{ define "repoContent" }}
     <main>
-        <p class="text-center pt-5 text-gray-400">
+        <p class="text-center pt-5 text-gray-400 dark:text-gray-500">
             This is an empty repository. Push some commits here.
         </p>
     </main>
 {{ end }}
 
 {{ define "repoAfter" }}
-<section class="mt-4 p-6 rounded bg-white w-full mx-auto overflow-auto">
+<section class="mt-4 p-6 rounded bg-white dark:bg-gray-800 dark:text-white w-full mx-auto overflow-auto">
     <strong>push</strong>
     <div class="py-2">
-        <code>git remote add origin git@{{.RepoInfo.Knot}}:{{ .RepoInfo.OwnerHandle }}/{{ .RepoInfo.Name }}</code>
+        <code class="dark:text-gray-300">git remote add origin git@{{.RepoInfo.Knot}}:{{ .RepoInfo.OwnerHandle }}/{{ .RepoInfo.Name }}</code>
     </div>
     <strong>clone</strong>
-    
+
 
     <div class="flex flex-col gap-2">
         <div class="pt-2 flex flex-row gap-2">
-            <span class="bg-gray-100 p-1 mr-1 font-mono text-sm rounded select-none">HTTP</span>
-            <code>git clone https://tangled.sh/{{ .RepoInfo.OwnerWithAt }}/{{ .RepoInfo.Name }}</code>
+            <span class="bg-gray-100 dark:bg-gray-700 p-1 mr-1 font-mono text-sm rounded select-none dark:text-gray-300">HTTP</span>
+            <code class="dark:text-gray-300">git clone https://tangled.sh/{{ .RepoInfo.OwnerWithAt }}/{{ .RepoInfo.Name }}</code>
         </div>
         <div class="pt-2 flex flex-row gap-2">
-            <span class="bg-gray-100 p-1 mr-1 font-mono text-sm rounded select-none">SSH</span><code>git clone git@{{.RepoInfo.Knot}}:{{ .RepoInfo.OwnerHandle }}/{{ .RepoInfo.Name }}</code>
+            <span class="bg-gray-100 dark:bg-gray-700 p-1 mr-1 font-mono text-sm rounded select-none dark:text-gray-300">SSH</span><code class="dark:text-gray-300">git clone git@{{.RepoInfo.Knot}}:{{ .RepoInfo.OwnerHandle }}/{{ .RepoInfo.Name }}</code>
         </div>
     </div>
-    <p class="py-2 text-gray-500">Note that for self-hosted knots, clone URLs may be different based on your setup.</p>
+    <p class="py-2 text-gray-500 dark:text-gray-400">Note that for self-hosted knots, clone URLs may be different based on your setup.</p>
 </section>
 
 {{ end }}
