--- a/appview/pages/templates/repo/log.html
+++ b/appview/pages/templates/repo/log.html
@@ -5,7 +5,7 @@
         {{ $commit := index .Commits 0 }}
         {{ $messageParts := splitN $commit.Message "\n\n" 2 }}
         <div>
-          <a href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}">
+          <a href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}" class="dark:text-white">
             <p class="pb-5">{{ index $messageParts 0 }}</p>
             {{ if gt (len $messageParts) 1 }}
               <p class="mt-1 text-sm cursor-text pb-5">
@@ -15,11 +15,11 @@
           </a>
         </div>
 
-        <div class="text-sm text-gray-500">
+        <div class="text-sm text-gray-500 dark:text-gray-400">
             <span class="font-mono">
                 <a
                     href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}"
-                    class="text-gray-500 no-underline hover:underline"
+                    class="text-gray-500 dark:text-gray-400 no-underline hover:underline"
                     >{{ slice $commit.Hash.String }}</a
                 >
             </span>
@@ -29,13 +29,13 @@
                 {{ if $didOrHandle }}
                 <a
                     href="/{{ $didOrHandle }}"
-                    class="text-gray-500 no-underline hover:underline"
+                    class="text-gray-500 dark:text-gray-400 no-underline hover:underline"
                     >{{ $didOrHandle }}</a
                 >
                 {{ else }}
                 <a
                     href="mailto:{{ $commit.Author.Email }}"
-                    class="text-gray-500 no-underline hover:underline"
+                    class="text-gray-500 dark:text-gray-400 no-underline hover:underline"
                     >{{ $commit.Author.Name }}</a
                 >
                 {{ end }}
@@ -51,13 +51,13 @@
 {{ define "repoAfter" }}
     <main>
         <div id="commit-log" class="flex-1 relative">
-            <div class="absolute left-8 top-0 bottom-0 w-px bg-gray-300"></div>
+            <div class="absolute left-8 top-0 bottom-0 w-px bg-gray-300 dark:bg-gray-600"></div>
             {{ $end := length .Commits }}
             {{ $commits := subslice .Commits 1 $end }}
             {{ range $commits }}
                 <div class="flex flex-row justify-between items-center">
                     <div
-                        class="relative w-full px-4 py-4 mt-4 rounded-sm bg-white"
+                        class="relative w-full px-4 py-4 mt-4 rounded-sm bg-white dark:bg-gray-800"
                     >
                         <div id="commit-message">
                             {{ $messageParts := splitN .Message "\n\n" 2 }}
@@ -66,13 +66,13 @@
                                     <div>
                                         <a
                                             href="/{{ $.RepoInfo.FullName }}/commit/{{ .Hash.String }}"
-                                            class="inline no-underline hover:underline"
+                                            class="inline no-underline hover:underline dark:text-white"
                                             >{{ index $messageParts 0 }}</a
                                         >
                                         {{ if gt (len $messageParts) 1 }}
 
                                             <button
-                                                class="py-1/2 px-1 bg-gray-200 hover:bg-gray-400 rounded"
+                                                class="py-1/2 px-1 bg-gray-200 hover:bg-gray-400 dark:bg-gray-700 dark:hover:bg-gray-600 rounded"
                                                 hx-on:click="this.parentElement.nextElementSibling.classList.toggle('hidden')"
                                             >
                                             {{ i "ellipsis" "w-3 h-3" }}
@@ -81,7 +81,7 @@
                                     </div>
                                     {{ if gt (len $messageParts) 1 }}
                                         <p
-                                            class="hidden mt-1 text-sm cursor-text pb-2"
+                                            class="hidden mt-1 text-sm cursor-text pb-2 dark:text-gray-300"
                                         >
                                             {{ nl2br (unwrapText (index $messageParts 1)) }}
                                         </p>
@@ -90,11 +90,11 @@
                             </div>
                         </div>
 
-                        <div class="text-sm text-gray-500 mt-3">
+                        <div class="text-sm text-gray-500 dark:text-gray-400 mt-3">
                             <span class="font-mono">
                                 <a
                                     href="/{{ $.RepoInfo.FullName }}/commit/{{ .Hash.String }}"
-                                    class="text-gray-500 no-underline hover:underline"
+                                    class="text-gray-500 dark:text-gray-400 no-underline hover:underline"
                                     >{{ slice .Hash.String 0 8 }}</a
                                 >
                             </span>
@@ -106,13 +106,13 @@
                                 {{ if $didOrHandle }}
                                 <a
                                     href="/{{ $didOrHandle }}"
-                                    class="text-gray-500 no-underline hover:underline"
+                                    class="text-gray-500 dark:text-gray-400 no-underline hover:underline"
                                     >{{ $didOrHandle }}</a
                                 >
                                 {{ else }}
                                 <a
                                     href="mailto:{{ .Author.Email }}"
-                                    class="text-gray-500 no-underline hover:underline"
+                                    class="text-gray-500 dark:text-gray-400 no-underline hover:underline"
                                     >{{ .Author.Name }}</a
                                 >
                                 {{ end }}
@@ -131,7 +131,7 @@
         <div class="flex justify-end mt-4 gap-2">
             {{ if gt .Page 1 }}
                 <a
-                    class="btn flex items-center gap-2 no-underline hover:no-underline"
+                    class="btn flex items-center gap-2 no-underline hover:no-underline dark:text-white dark:hover:bg-gray-700"
                     hx-boost="true"
                     onclick="window.location.href = window.location.pathname + '?page={{ sub .Page 1 }}'"
                 >
@@ -144,7 +144,7 @@
 
             {{ if eq $commits_len 30 }}
                 <a
-                    class="btn flex items-center gap-2 no-underline hover:no-underline"
+                    class="btn flex items-center gap-2 no-underline hover:no-underline dark:text-white dark:hover:bg-gray-700"
                     hx-boost="true"
                     onclick="window.location.href = window.location.pathname + '?page={{ add .Page 1 }}'"
                 >
