--- a/appview/pages/templates/repo/tree.html
+++ b/appview/pages/templates/repo/tree.html
@@ -17,14 +17,14 @@
     {{ $containerstyle := "py-1" }}
     {{ $linkstyle := "no-underline hover:underline" }}
 
-    <div class="pb-2 mb-3 text-base border-b border-gray-200">
+    <div class="pb-2 mb-3 text-base border-b border-gray-200 dark:border-gray-500">
       <div class="flex flex-col md:flex-row md:justify-between gap-2">
         <div id="breadcrumbs" class="overflow-x-auto whitespace-nowrap">
           {{ range .BreadCrumbs }}
-          <a href="{{ index . 1}}" class="text-bold text-gray-500 {{ $linkstyle }}">{{ index . 0 }}</a> /
+          <a href="{{ index . 1}}" class="text-bold text-gray-500 dark:text-gray-400 {{ $linkstyle }}">{{ index . 0 }}</a> /
           {{ end }}
         </div>
-        <div id="dir-info" class="text-gray-500 text-xs md:text-sm flex flex-wrap items-center gap-1 md:gap-0">
+        <div id="dir-info" class="text-gray-500 dark:text-gray-400 text-xs md:text-sm flex flex-wrap items-center gap-1 md:gap-0">
           {{ $stats := .TreeStats }}
 
           <span>at <a href="/{{ $.RepoInfo.FullName }}/tree/{{ $.Ref }}">{{ $.Ref }}</a></span>
@@ -56,7 +56,7 @@
                   {{ i "folder" "w-3 h-3 fill-current" }}{{ .Name }}
                 </div>
             </a>
-            <time class="text-xs text-gray-500">{{ timeFmt .LastCommit.When }}</time>
+            <time class="text-xs text-gray-500 dark:text-gray-400">{{ timeFmt .LastCommit.When }}</time>
         </div>
     </div>
     {{ end }}
@@ -71,7 +71,7 @@
                   {{ i "file" "w-3 h-3" }}{{ .Name }}
                 </div>
             </a>
-            <time class="text-xs text-gray-500">{{ timeFmt .LastCommit.When }}</time>
+            <time class="text-xs text-gray-500 dark:text-gray-400">{{ timeFmt .LastCommit.When }}</time>
         </div>
     </div>
     {{ end }}
