--- a/appview/pages/templates/user/login.html
+++ b/appview/pages/templates/user/login.html
@@ -1,6 +1,6 @@
 {{ define "user/login" }}
     <!doctype html>
-    <html lang="en">
+    <html lang="en" class="dark:bg-gray-900">
         <head>
             <meta charset="UTF-8" />
             <meta
@@ -13,10 +13,10 @@
         </head>
         <body class="flex items-center justify-center min-h-screen">
             <main class="max-w-64">
-                <h1 class="text-center text-2xl font-semibold italic">
+                <h1 class="text-center text-2xl font-semibold italic dark:text-white">
                     tangled
                 </h1>
-                <h2 class="text-center text-xl italic">
+                <h2 class="text-center text-xl italic dark:text-white">
                     tightly-knit social coding.
                 </h2>
                 <form
